src/resources/jamtaba.css
/* ... */
QPushButton#localControlsCollapseButton:checked{
   background-image: url(:/images/mini arrow right.png);
   background-position: center center;
}
QPushButton#localControlsCollapseButton::hover:checked{
   background-image: url(:/images/mini arrow right hover.png);
}
/* ------------------------------ */

.QWidget#contentPanel{
    background: transparent;
    border: none;
}

#contentPanel .QTabWidget:pane{
    /*background-color: #BCBCBC;*/
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
            stop: 0     #dedede,
            stop: 1.0   #bcbcbc);
}

#contentPanel .QTabWidget:pane, #chatArea .QTabWidget:pane{
    border: 1px solid rgba(0, 0, 0, 60);
    border-radius: 2px;
    padding: 0px;
}

#chatArea .QTabWidget:pane{
    /* background-color: rgba(255, 255, 255, 80); */
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop: 0     rgba(255, 255, 255, 80),
        stop: 0.85   rgba(255, 255, 255, 90),
        stop: 1.0   rgba(255, 255, 255, 140));
}

 .QTabWidget::tab-bar {
    left: 10px; /* move to the right by 5px */
    padding: 3px;
 }

/* Style the tab using the tab sub-control. Note that
it reads QTabBar _not_ QTabWidget */
.QTabBar::tab {
    background-color: rgb(180, 180, 180);
    border: none;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    min-width: 8ex;
    padding: 3px;
    padding-left: 10px;
    padding-right: 10px;
    font-size: 11px;
 }

 .QTabBar::tab:selected, .QTabBar::tab:hover {
    background-color: rgb(210, 210, 210)
 }

 .QTabBar::tab:selected {
    border: 1px solid;
    border-color: #9B9B9B;
    border-bottom-color: #C2C7CB; /* same as pane color */
 }

 .QTabBar::tab:!selected {
    margin-top: 3px; /* make non-selected tabs look smaller */
    color: rgb(90, 90, 90);
 }

/*++++++++++++++++++++*/

.QMainWindow .QGroupBox::title {
subcontrol-origin: margin;
subcontrol-position: top center; /* position at the top center */
padding: 10 3px;
color: rgb(190, 190, 190);
border-bottom-style: groove;
border-bottom-color: darkgray;
border-width: 3px;
}

QScrollArea{
border: none;
background: transparent;
}

QPlainTextEdit{
    border: none;
}

QScrollArea > QWidget > QWidget{/*the content panel - QSCroll contém um QWidget privado que já é uma view port,além disso eu usei o meu próprio widget*/
background: transparent;
}

BusyDialog{
    border: 1px solid rgba(0, 0, 0, 50);
    border-radius: 0px;
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
            stop:0 rgb(255, 255, 255),
            stop:0.1 rgb(240, 240, 240)
            stop:0.9 rgba(200, 200, 200),
            stop:1 rgba(180, 180, 180));
}
BusyDialog #labelGif{
    border: none;
    background-color: rgba(0, 0, 0, 10);
    border-radius: 32px;/*simulate a circle as background */
    max-width: 64px;
    max-height: 64px;
    qproperty-alignment: AlignCenter;
    text-align: center;
}

BusyDialog > QLabel{
    font-weight: bold;
}


JamRoomViewPanel{
    background-color: none;/*#EAEAEA;*/
    border: 1px solid rgb(180,180,180);
    /*border-bottom: 1px solid rgb(167, 167, 167);
    border-right: 1px solid rgb(180,180,180);*/
    border-left-color: #C6C6C6;
    border-top-color:#C6C6C6;

    border-radius: 2px;
    padding: 1px;
}

JamRoomViewPanel #panelTop{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
       stop:0 #EAEAEA,
        stop:1 #CACACA);

    margin: 1px;
    margin-bottom: 0px;

    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
}

JamRoomViewPanel #content{
    background-color: rgb(253, 253, 253);
    border: none;
    margin: 1px;
    border-top: 1px solid #dddddd;

}

JamRoomViewPanel #labelName{
    /*font-size: 10px;*/
    font-weight: bold;
}

JamRoomViewPanel  #labelRoomStatus, JamRoomViewPanel  #labelRoomType{
    font-size: 10px;
    color: rgb(90, 90, 90);
}
JamRoomViewPanel  #labelRoomType{
    margin-right: 3px;
    margin-bottom: -3px;
}

/*+++++++++++++++++++++++++++++++*/

#xmitButton{
    border-radius: 2px;
    border-width: 1px;
    font-size: 11px;
    padding: 0px;
    padding-top: 3px;
    padding-bottom: 3px;
    color: black;
    min-height: 15px;
    min-width: 10px;

}

#xmitButton:checked{
    /*background-color: rgb(90,90,90);*/
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(90, 255, 62, 140), stop:1 rgb(0, 175, 0, 140));
    border-color: rgb(50, 50, 50);
    border-style: inset;
    color: rgba(0,40, 0);
}


QPushButton#xmitButton[preparing="true"]{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255,255,0), stop:1 rgb(204,204,0));
}

#xmitButton:!checked{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgba(255, 90, 62, 140), stop:1 rgba(175, 0, 0, 140));
    border-style: outset;
    border-color: rgb(50,50,50);
    color: rgb(140, 140, 140);
}

#xmitButton:hover{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(90, 255, 62, 170), stop:1 rgb(0, 175, 0, 170));
}

#xmitButton:hover:!checked{
    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgba(255, 90, 62, 180), stop:1 rgba(175, 0, 0, 180));

}
/*+++++++++++++++++++++++++++++++*/

/*  Track view +++++++++++++++++++++++++++++++++++++++++++++++ */
BaseTrackView{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
        stop:0 rgb(200, 200, 200),
        stop:0.01 rgb(240, 240, 240),
        stop:1 rgb(110, 110, 110)
    );
   border: 1px solid rgb(61,61,61);
   border-radius: 0px;
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
   font-size: 8px; /*db value */
}

BaseTrackView[unlighted="true"] > QFrame#topSeparator, BaseTrackView[unlighted="true"] > QFrame#panSectionSeparator{
    background-color: rgba(0, 0, 0, 5);
}

BaseTrackView[unlighted="true"]{
    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(150, 150, 150), stop:1 rgb(50, 50, 50));
}
/* ... */

